# computer_vision

./: README.md
lab1/: CMakeLists.txt
lab1/include/max_min_filter/: max_min_filter.hpp
lab1/max_min_filter/: CMakeLists.txt
lab1/max_min_filter/src/: main.cpp  max_min_filter.cpp
lab1/max_min_filter/tests/: tests_main.cpp
lab1/src/: main.cpp
lab1/task1/: CMakeLists.txt  main.cpp  robot.cpp  robot.hpp
lab1/task2/: CMakeLists.txt  keys.hpp  main.cpp  shell.cpp  shell.hpp  tank.cpp  tank.hpp
lab1/tests/: tests_main.cpp
lab2/: CMakeLists.txt  img_proc.hpp  main.cpp  rgb_filter.py
lab2/rgb_filter/: data.json
lab2/rgb_filter/src/: apply_rgb_filter.cpp  construct_rgb_filter.cpp
lab2/src/: apply_rgb_filter.cpp  construct_rgb_filter.cpp  filter.hpp
lab3/: CMakeLists.txt  main.cpp
lab3/task1/: main.cpp
lab4/: CMakeLists.txt  correct.cpp  fourier.hpp  g.cpp  main.cpp  old_main.cpp  v.cpp
lab4/marker_detector/: CMakeLists.txt
lab4/marker_detector/src/: marker_detector.cpp
lab5/: CMakeLists.txt  calibrate_camera.cpp  calibrate_camera.py  calibration_params.yaml  create_cube_from_camera.py  detect_aruco.py  generate_aruco_board.py
lab5/src/: corners_matching.cpp  create_panorama.cpp  find_homography_matrix.cpp  homography.cpp  match_corners.cpp
lab5/src/include/: corners_matching.hpp  homography.hpp  match_corners.hpp
lab6/: main.py
lab7/: skeleton.py
poly/lab1/task1/: CMakeLists.txt  main.cpp  robot.hpp
poly/lab1/task2/: CMakeLists.txt  main.cpp  shell.cpp  tank.cpp
poly/lab3/: hsv_picker.hpp
poly/lab4/: fourier.hpp  old.cpp  old.hpp  task.cpp  timer.hpp
poly/lab5/: calibrate_camera.py  matlab_calibration.py
poly/lab6/: hsv_picker.py  main.py
poly/lab7/: main.py
